# Video-ghost

./: .env  .env.example  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
Schemas/: base.py  user_schemas.py
Templates/: index.html
domain/: confing.py  db.py
migrations/: env.py
models/: User.py  Videos.py
routers/: user_router.py  video_router.py
schemas/: video_schemas.py
